--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,9 @@ file.reference.flatlaf-3.2.1.jar=lib\\flatlaf-3.2.1.jar
 file.reference.flatlaf-3.2.jar=lib\\flatlaf-3.2.jar
 file.reference.flatlaf-extras-3.2.jar=lib\\flatlaf-extras-3.2.jar
 file.reference.jna-5.5.0.jar=lib\\jna-5.5.0.jar
+file.reference.miglayout-4.0.jar=lib\\miglayout-4.0.jar
 file.reference.swing-jnafilechooser.jar=lib\\swing-jnafilechooser.jar
+file.reference.TimingFramework-0.55.jar=lib\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -47,7 +49,9 @@ javac.classpath=\
     ${file.reference.flatlaf-3.2.jar}:\
     ${file.reference.flatlaf-extras-3.2.jar}:\
     ${file.reference.jna-5.5.0.jar}:\
-    ${file.reference.swing-jnafilechooser.jar}
+    ${file.reference.swing-jnafilechooser.jar}:\
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -83,7 +87,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Analisador-Lexico
-main.class=analisador.lexico.Tela
+main.class=analisador.lexico.view.Tela
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
